trying to deploy the website

--- a/index.html
+++ b/index.html
@@ -49,3 +49,4 @@
     <script src="./assets/js/script.js" type="text/javascript"></script>
   </body>
 </html>
+ <!-- minor change for github website deployment... somehow it's not working and apparently a small update to main will fix it. -->
